<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Saldo</string>
    <string name="app_author">Kristian Adrup</string>
    <string name="version">Version %s</string>
    <string name="by">by Kristian Adrup 2010</string>
    <string name="url_project">http://github.com/kria/saldo</string>
    <string name="disclaimer">Saldo is unofficial and not supported by any of the banks.</string>
    
    <string name="web_user_agent">Saldo/%s (Linux; U; Android %s) Apache-HttpClient/4.0</string>
    
    <string name="main_instructions">Set user/password in the Banks menu and then hit Update.</string>
    <string name="refresh">Update</string>
    
	<string name="widget_text">--- kr</string>
	<string name="widgetconfig_empty">You can\'t add a widget without any bank accounts.</string>
    
    <string name="menu_item_banks">Banks</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    
    <string name="settings_title">Settings</string>
    <string name="settings_updates">Automatic updates</string>
    <string name="settings_updates_interval_prompt">Choose update interval</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_display">Notify</string>
    <string name="settings_notifications_sound">Sound</string>
    
    <string name="banklogins_title">Banks</string>
    <string name="banklogins_empty">No banks added</string>
    <string name="banklogins_add_btn">Add bank</string>
    <string name="banklogins_menu_delete">Delete bank</string>
    
    <string name="bankloginedit_title">Bank login</string>
    <string name="bankloginedit_bank">Bank</string>
    <string name="bankloginedit_name">Name</string>
    <string name="bankloginedit_username">Username/Personnummer</string>
    <string name="bankloginedit_password">Password</string>
    
    <string name="bankloginedit_bank_prompt">Choose bank</string>
    
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    
    <string name="msg_no_accounts_retrieved">No accounts retrieved.</string>
    <string name="msg_refresh_finished">Refresh finished.</string>
    <string name="msg_no_banks">No banks to refresh.</string>
    <string name="msg_fetching_accounts">Fetching accounts from %s.</string>

    <string-array name="banks_array">
        <item>Swedbank</item>
        <item>Nordea</item>
        <item>Länsförsäkringar Bank</item>
        <item>ICA</item>
        <item>ICA Banken</item>
        <item>Coop</item>
        <item>First Card</item>
    </string-array>
    
    <string-array name="update_interval_array">
        <item>Off</item>
        <item>Day</item>
        <item>Half day</item>
        <item>Hour</item>
        <item>Half hour</item>
        <item>15 min</item>
    </string-array>   
    <string name="lock_pincode">Pincode</string>
</resources>
