<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="5dp" 
		android:background="#FF333333"
		android:text="Password lock" />
	<CheckedTextView 
		 android:id="@+id/password_lock"
		 android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:textAppearance="?android:attr/textAppearanceLarge" 
         android:checkMark="?android:attr/listChoiceIndicatorMultiple"
         android:text="Lock"
         android:gravity="fill_vertical"
		/>
	<TextView	
	xmlns:android="http://schemas.android.com/apk/res/android"	
	android:layout_width="fill_parent"	
	android:layout_height="wrap_content"
	style="?android:attr/listSeparatorTextViewStyle"
	android:text="@string/settings_updates" />
	<Spinner android:id="@+id/settings_autoupdate_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:prompt="@string/settings_updates_interval_prompt"
    />
    <TextView	
	xmlns:android="http://schemas.android.com/apk/res/android"	
	android:layout_width="fill_parent"	
	android:layout_height="wrap_content"
	style="?android:attr/listSeparatorTextViewStyle"
	android:text="@string/settings_notifications" />
	<CheckBox android:id="@+id/settings_notifications_enable_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/settings_notifications_display" />
    <CheckBox android:id="@+id/settings_notifications_sound_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/settings_notifications_sound" />
</LinearLayout>
